Version 1.3.6+svn:
 * build system
   * Fixed autoconf/automake builds so that --disable-python-installl
     will not try to create the default install directory for python
     stuff when it isn't needed. Otherwise if you aren't root, make
     errors out.
 * language and i18n:
   * updated translations: Danish, Japanese, Swedish
 * multiplayer:
   * improvements to the sound of the timer countdown
   * unit descriptions are no longer evaluated for the recruitment checksum
     and thus avoiding an OOS error when different languages are used. 
     The change is incompatible with older trunk versions fixes (bug #9472).
 * user interface:
   * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
 * WML engine:
   * now [base_unit]id= inside [unit] can extend upon existing unit types
   * new extra_defines key to define in campaigns some other preprocessor
     symbol *before* the files are repreprocessed
 * miscellaneous and bug fixes
   * rewrote the config merge routine (should improve parse time slightly)
   * various code cleanups
   * Isle of Anduin renamed to Isle of Alduin to avoid copyright problems.

Version 1.3.6:
 * language and i18n:
   * updated translations: Danish, Finnish, French, German
 * multiplayer:
   * the random start ToD option is now properly saved and loaded (bug #9532)
   * the map in the lobby could be randomly invisible due to an unitialized
     variable (bug #9555)
   * the automatic unit description used a non-MP safe way, this has been
     fixed
   * the unit name generation could with different locales call get_random() a
     different number of times. This lead to different names and traits. 
     Changed to call random a fixed number of times which fixes the traits.
 * miscellaneous and bug fixes
   * various code cleanups
   * proper handling of description autogeneration for per level [effect] on
     level 0 units
   * changed the order of which the permanent modifications of a unit are