@@ -27,9 +27,12 @@ class playmp_controller : public playsingle_controller
 public:
 	playmp_controller(const config& level, const game_data& gameinfo, game_state& state_of_game,
 		const int ticks, const int num_turns, const config& game_config, CVideo& video, bool skip_replay);
+	~playmp_controller();
 
 	static unsigned int replay_last_turn() { return replay_last_turn_; }
 	static void set_replay_last_turn(unsigned int turn);
+	static bool counting_down();
+	static void think_about_countdown(int ticks);
 
 protected:
 	virtual void handle_generic_event(const std::string& name);
@@ -49,7 +52,7 @@ protected:
 
 	turn_info* turn_data_;
 
-	int beep_warning_time_;
+	static int beep_warning_time_;
 private:
 	void process_oos(const std::string& err_msg);
 	static unsigned int replay_last_turn_;
